crates/syn2mas/src/synapse_reader/snapshots/syn2mas__synapse_reader__test__read_access_and_refresh_tokens-2.snap
---
source: crates/syn2mas/src/synapse_reader/mod.rs
expression: refresh_tokens
---
{
    SynapseRefreshToken {
        id: 8,
        user_id: FullUserId(
            "@alice:example.com",
        ),
        device_id: "ADEVICE",
        token: "syr_cccccccccccc_cccc",
    },
}
