crates/syn2mas/src/synapse_reader/snapshots/syn2mas__synapse_reader__test__read_access_and_unused_refresh_tokens.snap
---
source: crates/syn2mas/src/synapse_reader/mod.rs
expression: access_tokens
---
{
    SynapseAccessToken {
        user_id: FullUserId(
            "@alice:example.com",
        ),
        device_id: Some(
            "ADEVICE",
        ),
        token: "syt_AAAAAAAAAAAAAA_AAAA",
        valid_until_ms: None,
        last_validated: None,
        refresh_token_id: Some(
            8,
        ),
    },
    SynapseAccessToken {
        user_id: FullUserId(
            "@alice:example.com",
        ),
        device_id: Some(
            "ADEVICE",
        ),
        token: "syt_aaaaaaaaaaaaaa_aaaa",
        valid_until_ms: None,
        last_validated: None,
        refresh_token_id: Some(
            7,
        ),
    },
}
