crates/syn2mas/src/synapse_reader/snapshots/syn2mas__synapse_reader__test__read_users.snap
---
source: crates/syn2mas/src/synapse_reader/mod.rs
expression: users
---
{
    SynapseUser {
        name: FullUserId(
            "@alice:example.com",
        ),
        password_hash: Some(
            "$2b$12$aaa/aaaaaaaaaa.aaaaaaaaaaaaaaa./aaaaaaaaaaaaaaaaaaa/A",
        ),
        admin: SynapseBool(
            false,
        ),
        deactivated: SynapseBool(
            false,
        ),
        creation_ts: SecondsTimestamp(
            2018-06-30T21:26:02Z,
        ),
        is_guest: SynapseBool(
            false,
        ),
    },
}
